Remove footer emoji, improve beforeunload handler for better blocking

--- a/options.html
+++ b/options.html
@@ -62,13 +62,8 @@
     </div>
 
     <div class="note">
-      Detection is heuristic-based: the extension watches X’s reply composer & post actions. If X updates its UI, you may need to update the extension. If counting still misses replies, open the page console (DevTools → Console) and look for <code>[ReplyGuy]</code> logs for debugging.
+      Detection is heuristic-based: the extension watches X's reply composer & post actions. If X updates its UI, you may need to update the extension. If counting still misses replies, open the page console (DevTools → Console) and look for <code>[ReplyGuy]</code> logs for debugging.
     </div>
-
-    <footer>
-      <div>Made with ☕ and chaos</div>
-      <div><a class="link" href="#" id="helpLink">Help / Troubleshoot</a></div>
-    </footer>
   </div>
 
   <script src="options.js"></script>
