Update extension: add icon.png, remove emojis, improve roasting messages

--- a/options.html
+++ b/options.html
@@ -94,7 +94,7 @@
 </head>
 <body>
   <header>
-    <div class="icon">👺</div>
+    <div class="icon"></div>
     <div>
       <h1>Reply Guy Control</h1>
       <p class="subtitle">Quota management</p>
